--- a/_scss_partials/_variables.scss
+++ b/_scss_partials/_variables.scss
@@ -8,6 +8,7 @@ $title-color: #212121;
 /**
 * General theme colors
 */
+$white-color: white;
 $base-color: #212121;
 $main-color: #FFC600;
 $main-color-transition: #F9B50F;
